# romulus

./: .env.example  .gitignore  README.md  docker-compose.yml  game_3801f2bb.nes.base64  generate-client.sh  romulus.code-workspace  test.rom
backend/: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  alembic.ini  config.py  dependencies.py  docker-compose.yml  docker-entrypoint.sh  lint.sh  main.py  pyproject.toml  pytest.ini  test.nes  test_upload_workflow.py
backend/admin/: assets.py
backend/alembic/: env.py
backend/alembic/versions/: 0d4b1f942ad8_add_unique_constraint_for_scene_name_.py  17331b8d005f_add_compiled_assets_table.py  2cdc53e397ad_add_game_data_and_move_entities_to_game_.py  49c9b1097ca6_add_entity_table.py  5e33375f7d87_add_sprite_set_to_assettype_enum.py  7ad237cf61be_add_assets_table.py  a2b44df14537_add_processed_flag_to_image_assets.py  b06aa0715ee0_initial_migration_with_game_and_scene_.py  b667f3f89499_add_processed_flag_to_image_assets.py  be4714d5fef7_add_component_model_with_game_.py  bed9618f6a5d_add_component_data_field_to_component.py  c2eb527c5252_add_component_table.py  d9998f990d35_add_pipeline_stages_and_parent_.py  df3dd17246c3_add_entity_id_to_components_table.py  f6d0a8cccb2b_use_source_url_for_parent_asset_.py
backend/api/: __init__.py
backend/api/assets/: compiled_models.py  compiled_routers.py  game_asset_models.py  game_asset_routers.py  models.py  routers.py  schemas.py
backend/api/games/: __init__.py  models.py  routers.py  schemas.py
backend/api/resources/: models.py  routers.py  schemas.py
backend/core/: models.py  pydantic_type.py  schemas.py  storage.py
backend/core/rom/: asm.py  builder.py  code_block.py  code_block_registry.py  data.py  label_registry.py  preamble.py  registry.py  rom.py  subroutines.py  zero_page.py
backend/game/: models.py  routers.py  schemas.py
backend/game/component/: models.py  routers.py  schemas.py
backend/game/scene/: models.py  routers.py  schemas.py
backend/integration_tests/: README.md  conftest.py  test_compiled_assets.py  test_resource_filtering.py
backend/integration_tests/games/: test_game.py  test_render.py
backend/tests/: test_assets.py
backend/tests/rom/: __init__.py  (+8 more)
(+2342 files in other folders)
